# ffxivpp

./: .gitignore  TODO.md  app.py  bot.py  code_quality_report.md  fetch_data.py  implementation_plan.md  lint_report.txt  multitenancy_plan.md  party.db.bak  preferences.md  projectoutline.md  pyproject.toml  restart_bot.sh  schema.sql
.github/workflows/: deploy.yml
app/: __init__.py  auth.py  compute.py  db.py  lodestone.py  models.py  routes.py
bot/: commands.py
deploy/: deploy.sh  ffxiv-bot.service  ffxiv-flask.service  install.sh  nginx.conf  sudoers
static/: admin.css  admin.html  partydashboard.html
tests/: conftest.py  test_app.py  test_bot.py  test_compute.py  test_embed.py  test_lodestone.py  test_scraper.py
tests/e2e/: conftest.py  test_dashboard.py  test_security.py  test_server_connectivity.py  test_ui_health.py
tests/fixtures/: character_anonymized.html  tooltip_anonymized.html
tests/integration/: test_api.py  test_auth.py  test_compute_api.py
