[project]
name = "ffxivpp"
version = "0.1.0"
description = "FF14 Party Planner — assign jobs, set constraints, compute valid parties"
requires-python = ">=3.12"
dependencies = [
    "discord-py>=2.7.1",
    "flask>=3.1.3",
    "gunicorn>=23.0.0",
    "python-dotenv>=1.2.2",
    "flask-discord>=0.1.64",
    "beautifulsoup4>=4.14.3",
    "sqlalchemy>=2.0.49",
]

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "playwright>=1.60.0",
    "pytest>=9.0.3",
    "pytest-flask>=1.3.0",
    "pytest-playwright>=0.8.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.14",
    "httpx>=0.28.0",
    "pytest-asyncio>=1.3.0",
]

[tool.mypy]
strict = true
python_version = "3.12"
exclude = ["bot/", "tests/"]

[tool.ruff]
line-length = 100
target-version = "py312"


[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
timeout = 5
timeout_method = "thread"
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
